[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Level2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Blocks.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilesets/Key.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Key.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://04B_03__.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Level2" type="Area2D"]
script = ExtResource( 1 )

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65537, 26, 0, 65538, 31, 0, 65539, 31, 0, 65540, 31, 0, 65541, 27, 0, 131073, 30, 0, 131074, 37, 0, 131075, 37, 0, 131076, 37, 0, 131077, 30, 0, 196609, 30, 0, 196610, 37, 0, 196611, 37, 0, 196612, 37, 0, 196613, 28, 0, 196614, 31, 0, 196615, 31, 0, 196616, 27, 0, 262145, 30, 0, 262146, 37, 0, 262147, 37, 0, 262148, 37, 0, 262149, 37, 0, 262150, 37, 0, 262151, 37, 0, 262152, 30, 0, 327681, 30, 0, 327682, 31, 0, 327683, 31, 0, 327684, 31, 0, 327685, 31, 0, 327686, 33, 0, 327687, 37, 0, 327688, 30, 0, 327689, 1, 0, 327690, 26, 0, 327691, 31, 0, 327692, 31, 0, 327693, 31, 0, 327694, 27, 0, 393217, 30, 0, 393218, 38, 0, 393219, 37, 0, 393220, 37, 0, 393221, 37, 0, 393222, 37, 0, 393223, 37, 0, 393224, 28, 0, 393225, 31, 0, 393226, 29, 0, 393227, 37, 0, 393228, 37, 0, 393229, 37, 0, 393230, 30, 0, 458753, 30, 0, 458754, 38, 0, 458755, 37, 0, 458756, 37, 0, 458757, 37, 0, 458758, 37, 0, 458759, 37, 0, 458760, 37, 0, 458761, 37, 0, 458762, 37, 0, 458763, 37, 0, 458764, 37, 0, 458765, 37, 0, 458766, 30, 0, 524289, 28, 0, 524290, 31, 0, 524291, 31, 0, 524292, 31, 0, 524293, 31, 0, 524294, 31, 0, 524295, 31, 0, 524296, 31, 0, 524297, 31, 0, 524298, 27, 0, 524299, 37, 0, 524300, 37, 0, 524301, 37, 0, 524302, 30, 0, 589831, 3, 0, 589832, 1, 0, 589833, 1, 0, 589834, 28, 0, 589835, 31, 0, 589836, 31, 0, 589837, 31, 0, 589838, 29, 0, 589840, 0, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 2, 0, 655367, 3, 0, 655374, 4, 0, 655375, 6, 0, 655376, 7, 0, 655380, 3, 0, 655399, 10, 0, 720903, 3, 0, 720916, 3, 0, 786439, 4, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 2, 0, 786452, 3, 0, 851984, 4, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 7, 0 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 77, 77 )

[node name="Key_Block_Green" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393221, 2, 0, 393222, 2, 0, 458758, 2, 0 )

[node name="Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 400.63, 236.501 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 77, 77 )

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 50.0
margin_right = 456.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "COLLECT KEYS TO UNLOCK
DIFFERENT COLOURED WALLS"
[connection signal="Unlock" from="Key" to="." method="_on_Key_Unlock"]
